--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,14 @@ body, html {
   
 }
 
-.carousel-item {
-  width: 100%;
-  max-height: 50vmax;	
+.jumbotron{
+  margin: 3% 0% 0% 0%;
+  max-height: 45vmax;
+}
 
+.carousel-item>img {
+  max-height: 40vmax;	
+  margin: 0px;
 }
 
 .nav-item,.btn-secondary {
@@ -66,19 +70,20 @@ header {
 .progress-container {
   width: 100%;
   height: 8px;
-  background-color: #ccc;
+  background:; #ccc;
 }
 
 /* The progress bar (scroll indicator) */
 .progress-bar {
   height: 8px;
   background-color: #ff9999;
+  width:0%;
 }
 
 .logo{
   
   width: 55%;
-  color: black;
+  font-size: 20px;
   text-decoration: bold;
 }
 
@@ -176,7 +181,7 @@ header {
 
 
 .row, .row_alt {
-  padding: 64px;
+  
   border-radius: 10px;
   border: 0 solid;
   border-top-width: 3px;
@@ -185,9 +190,7 @@ header {
   border-bottom-style: ridge;
   border-top-color:  #ffcc99;
   border-bottom-color: #ffcc99;
-  padding: 8px 0px;
   margin: 0px;
- 
   
   /*border-image: url(/images.jpg);*/
 }
